output/btc20_p5_25_124/foundry_validation/F-001_Upgradeable_presale_exposes_no_initializ/forge_stdout_attempt1.log
Compiler run failed:
Error (9429): This looks like an address but has an invalid checksum. Correct checksummed address: "0xE69be7d6B306b4FbCe516e3f07C8f438a6860084". If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
SyntaxError: This looks like an address but has an invalid checksum. Correct checksummed address: "0xE69be7d6B306b4FbCe516e3f07C8f438a6860084". If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
  --> src/FlawVerifier.sol:62:46:
   |
62 |     address public constant IMPLEMENTATION = 0xe69Be7d6b306B4FbCE516E3f07C8f438A6860084;
   |                                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

